<?xml version="1.0"?>
<package format="2">
    <name>deliverybot_description</name>
    <version>1.0.0</version>
    <description>DeliveryBot desctiption package</description>
    <maintainer email="asketch8@gmail.com">Ammaar Solkar</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>