<?xml version="1.0"?>
<package format="2">
  <name>deliverybot_mapping</name>
  <version>1.0.0</version>
  <description>The deliverybot_mapping package</description>

  <maintainer email="asketch8@gmail.com">Ammaar Solkar</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>map_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
  </export>
</package>
