<?xml version="1.0"?>
<package format="2">
  <name>deliverybot_simulations</name>
  <version>1.0.0</version>
  <description>The deliverybot_simulations package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="asketch8@gmail.com">Ammaar Solakr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>	
  <build_depend>gazebo</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <exec_depend>gazebo</exec_depend>

	<export>
    	<gazebo_ros gazebo_model_path="${prefix}/models"/>
	    <gazebo_ros gazebo_media_path="${prefix}/models"/>
	</export>
</package>



