<?xml version="1.0"?>
<package format="2">
  <name>elevator_gui</name>
  <version>1.0.0</version>
  <description>The elevator_gui package</description>
  <maintainer email="asketch8@gmail.com">Ammaar Solkar</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>
